# corter

./: .dockerignore  AXIOMCORE_IMPROVEMENTS.md  Dockerfile  HACKATHON_REPORT.md  LICENSE  MANIFEST.in  Procfile  README.md  TECHNICAL_REPORT.md  axiomcore.py  axiomcore_web.py  cli.py  config.yaml  corter.py  corter_web.py  data.csv  pyproject.toml  requirements.txt  setup.py  web_ui.py
.github/: PUBLISH.md
.github/workflows/: ci.yml
corter_pkg/: __init__.py  cli.py
docs/: index.md
templates/: dashboard.html  index.html
tests/: __init__.py  test_hpo.py  test_xai.py
