[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomcore"
version = "0.3.0"
description = "Autonomous ML Optimization Framework - No cloud required, no GPU farm needed"
readme = "README.md"
authors = [
    {name = "AxiomCore Team", email = "support@axiomcore.dev"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["machine-learning", "ml", "optimization", "hyperparameter-tuning", "explainable-ai", "xai", "automl"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "joblib>=1.3.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
]
xai = [
    "shap>=0.42.0",
]
all = [
    "axiomcore[dev,xai]",
]

[project.urls]
Homepage = "https://github.com/pizenkov13-boop/AxiomCore"
Documentation = "https://github.com/pizenkov13-boop/AxiomCore/blob/main/README.md"
Repository = "https://github.com/pizenkov13-boop/AxiomCore"
"Bug Tracker" = "https://github.com/pizenkov13-boop/AxiomCore/issues"

[project.scripts]
axiomcore = "cli:main"

[tool.setuptools]
py-modules = ["axiomcore", "web_ui", "axiomcore_web", "cli"]

[tool.setuptools.package-data]
"*" = ["templates/*.html", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false